<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="login_name_title">login</string>
    <string name="login_name_hint">login name</string>
    <string name="password_title">password</string>
    <string name="switch_text">What does this do?</string>
    <string name="checkbox_text">CheckBox</string>
    <string name="radio_button_text">RadioButton</string>
    <string name="camera_button_description">camera</string>
    <string name="password_hint">password</string>
    <string name="login_button_text">Login</string>
    <string name="dialog_message">Do you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dialog_title">Exit</string>
    <string name="response_message">Here is my response</string>
    <string name="start_chat_button">Start Chat</string>
    <string name="send_button">Send</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="go_back_title">Do you want to go back?</string>
    <string name="fab_clicked_message">FAB was clicked</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="about">About</string>
    <string name="version_text">Version 1.0, by Benjamin Segall</string>
    <string name="new_message_hint">New Message</string>
</resources>
