<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_one"
        android:title="@string/one"
        android:icon="@drawable/one"
        android:orderInCategory="101"
        app:showAsAction="always" />
    <item android:id="@+id/action_two"
        android:title="@string/two"
        android:icon="@drawable/two"
        android:orderInCategory="102"
        app:showAsAction="always" />
    <item android:id="@+id/action_three"
        android:title="@string/three"
        android:icon="@drawable/three"
        android:orderInCategory="103"
        app:showAsAction="always" />

    <item android:id="@+id/action_about"
        android:title="@string/about"
        android:orderInCategory="103"
        app:showAsAction="never" />

</menu>